--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -208,7 +208,7 @@
                     <div
                         class="row">
                         {# <div class="col-12"></div> #}
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-md-4">
                             <div class="site-footer-widget">
                                 <div class="site-footer-logo">
                                     <a href="{{ '/' | url }}">
@@ -223,7 +223,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-lg-2 col-md-6">
+                        <div class="col-lg-7 col-md-6">
                             <div class="site-footer-widget">
                                 <h5 class="site-footer-widget-title">{{ footer.siteMapHeading }}</h5>
                                 <ul class="site-footer-widget-links">
@@ -235,7 +235,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-2 col-md-6">
+                        <div class="col-lg-2 col-md-6 d-none">
                             <div class="site-footer-widget">
                                 <h5 class="site-footer-widget-title">{{ footer.socialHeading }}</h5>
                                 <ul class="site-footer-widget-links">
@@ -247,7 +247,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-md-6 d-none">
                             <div class="site-footer-widget">
                                 <h5 class="site-footer-widget-title">{{ footer.brandHeading }}</h5>
                                 <p class="site-footer-widget-description">
@@ -257,7 +257,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-lg-2 col-12">
+                        <div class="col-lg-2 col-md-2 col-12">
                             <a href="#top" class="site-footer-widget-top">
                                 <img src="{{ footer.back2topIcon | url }}" alt="back-to-top">
                                 <p>
