update blog detail pagination

--- a/src/_includes/layouts/blogDetails.njk
+++ b/src/_includes/layouts/blogDetails.njk
@@ -17,10 +17,10 @@
             <div class="site-project-single-action d-flex justify-content-between mt-5">
               {% if previousPost%}
               <a href="{{previousPost.url | url}}">
-                <img class="rev" src="{{ '/assets/images/to-top.svg' | url}}" alt="next project">
+                <img class="rev" src="{{ '/assets/images/to-top.svg' | url}}" alt="previous article">
                 <span class="link-area">
                   <span data-text="{{previousPost.data.title}}">
-                    Previous Project
+                    Previous Article
                   </span>
                 </span>
               </a>
@@ -29,10 +29,10 @@
               <a href="{{nextPost.url | url}}">
                 <span class="link-area">
                   <span data-text="{{nextPost.data.title}}">
-                    Next Project
+                    Next Article
                   </span>
                 </span>
-                <img src="{{ '/assets/images/to-top.svg' | url }}" alt="next project">
+                <img src="{{ '/assets/images/to-top.svg' | url }}" alt="next article">
               </a> 
               {% endif %} 
             </div>
