--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -15,8 +15,7 @@
         {% else %}
             <meta
                 name="description"
-                content="100XBuilds provides marketing automation, sales systems, and business operations solutions for luxury custom
-                    home builders with $5M+ annual revenue. Guaranteed ROI improvements.">
+                content="100XBuilds provides marketing automation, sales systems, and business operations solutions for luxury custom home builders with $5M+ annual revenue. Guaranteed ROI improvements.">
         {% endif %}
         <meta name="generator" content="Eleventy">
         <meta name="robots" content="noindex, Nofollow, Noimageindex">
