fix logo sizing mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,10 @@ a {
   .site-navigation .nav-item {
     text-align: center;
   }
+
+  .site-navigation .navbar-brand img {
+    max-width: 80px;
+  }
 }
 
 /* =========================================
